# Caveman

./: .gitignore  README.md  build.ps1  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yaml  tests.yaml
src/: __init__.py
src/caveman/: __init__.py
src/caveman/lib/: manager.py  model.py  mongo.py
src/lib/: manager.py  model.py  mongo.py
src/traducteur/: __init__.py  query.py
src/traducteur/lib/: context.py  manager.py  model.py  mongo.py  sql.py
test/managers/: test_sql_manager.py
test/models/: test_base_model.py
test/models/document/: test_mongo_model.py  test_mongo_sorting.py
test/tasks/redis/: test_redis_chain.py  test_redis_task.py
tests/: crud.py  sorting.py  sql.py
tests/managers/: sql_query_builder_tests.py
tests/mock/: mock_complex.py
tests/models/sequential/: sql_model_tests.py
tests/tasks/: base_redis_test.py  chain_tests.py  redis_task_tests.py
traducteur/context/: __init__.py  base.py  mongo.py  sqlite.py
traducteur/exceptions/tasks/: __init__.py  base.py  worker.py
traducteur/managers/: __init__.py  base.py  mongo.py  sql.py
traducteur/managers/filters/: base.py
traducteur/managers/query/: __init__.py  sql.py
traducteur/models/base/: __init__.py  base.py  database.py
traducteur/models/document/: mongo.py  redis.py
traducteur/models/nosql/: __init__.py  mongo.py  redis.py
traducteur/models/relational/: sql.py
traducteur/tasks/base/: __init__.py  base.py  lifetime.py  status.py
traducteur/tasks/chain/: builder.py
traducteur/tasks/task/: redis.py  (+1 more)
(+9 files in other folders)
